testing change in css, trying to find out issue on iOS

--- a/_sass/1-tools/normalize.scss
+++ b/_sass/1-tools/normalize.scss
@@ -105,7 +105,7 @@ figure {
 
 hr {
   -moz-box-sizing: content-box;
-  box-sizing: content-box;
+  /* box-sizing: content-box;*/
   height: 0;
 }
 
